# bazel-codecov

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod  go.sum  requirements.in  requirements_lock.txt  toolchain.bzl
codecov/: BUILD.bazel  cli.go  cli_test.go  debug.go  def.bzl  main.go  reports.go  reports_test.go  repositories.bzl
codecov/private/: BUILD.bazel  upload-process.bzl  upload-process.sh.tpl
codecov/private/registry/: BUILD.bazel  codecov_launcher.sh.tpl
foo/: BUILD.bazel  foo.go  foo_test.go
private/: BUILD.bazel  toolchains_repo.bzl  upload-process.bzl  versions.bzl
