load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//codecov:def.bzl", "codecov_cli")

#codecov_rule(
#    name = "my_codecov_rule",
#    cli = "@pypi_codecov_cli//:rules_python_wheel_entry_point_codecovcli",
#    coverage_files = ["//:coverage_reports"],
#)

go_library(
    name = "codecov",
    srcs = [
        "cli.go",
        "debug.go",
    ],
    data = [
        "@pypi_codecov_cli//:rules_python_wheel_entry_point_codecovcli",
    ],
    importpath = "github.com/JohnAmican/bazel-codecov/codecov",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_davecgh_go_spew//spew",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
    ],
)

go_test(
    name = "codecov_test",
    srcs = ["cli_test.go"],
    data = [
        "//:coverage_reports",
    ],
    embed = [":codecov"],
    x_defs = {
        "cliPkg": "pypi_codecov_cli",
        "cliName": "rules_python_wheel_entry_point_codecovcli",
    },
)

#go_binary(
#    name = "codecov",
#    data = [
#        "//:coverage_reports",
#    ],
#    embed = [":codecov_lib"],
#    visibility = ["//visibility:public"],
#    x_defs = {
#        "cliPkg": "pypi_codecov_cli",
#        "cliName": "rules_python_wheel_entry_point_codecovcli",
#    },
#)
