load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@pypi//:requirements.bzl", "entry_point")

go_library(
    name = "codecov",
    srcs = [
        "cli.go",
        "reports.go",
    ],
    importpath = "github.com/JohnAmican/bazel-codecov/codecov",
    visibility = ["//visibility:private"],
    deps = ["@io_bazel_rules_go//go/runfiles:go_default_library"],
)

go_test(
    name = "codecov_test",
    srcs = [
        "cli_test.go",
        "reports_test.go",
    ],
    data = [
        "//:coverage_reports",
        entry_point("codecov_cli", "codecovcli"),
    ],
    embed = [":codecov"],
    x_defs = {
        #        "cli": "@pypi_codecov_cli//:rules_python_wheel_entry_point_codecovcli",
        "cliEntryPoint": entry_point("codecov_cli", "codecovcli"),
    },
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],
)

#go_binary(
#    name = "codecov",
#    data = [
#        "//:coverage_reports",
#    ],
#    embed = [":codecov_lib"],
#    visibility = ["//visibility:public"],
#    x_defs = {
#        "cliPkg": "pypi_codecov_cli",
#        "cliName": "rules_python_wheel_entry_point_codecovcli",
#    },
#)
