load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["*.tpl"]))

bzl_library(
    name = "upload-process",
    srcs = ["upload-process.bzl"],
    visibility = [
        "//oci:__subpackages__",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = [
        "//oci:__subpackages__",
    ],
)
