load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(glob(["*.tpl"]))

bzl_library(
    name = "upload-process",
    srcs = ["upload-process.bzl"],
    visibility = [
        "//codecov:__subpackages__",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = [
        "//codecov:__subpackages__",
    ],
)
